--- a/assets/style.css
+++ b/assets/style.css
@@ -7,7 +7,6 @@
   --stone-150: hsl(30, 18%, 87%);
   --stone-600: hsl(30, 10%, 34%);
   --stone-900: hsl(24, 5%, 18%);
-
   --brown-800: hsl(14, 45%, 36%);
 
   --rose-800: hsl(332, 51%, 32%);
@@ -28,26 +27,26 @@ body {
   font-weight: 400;
   line-height: 1.5;
   color: var(--stone-600);
-}
-
-h1,
-h2,
-h3 {
-  font-family: var(--font-secundary);
-  font-weight: 400;
-  margin-top: 0;
-  margin-bottom: 1rem;
+  background-color: var(--white);
 }
 
 h1 {
-  font-size: 2rem;
+  font-family: var(--font-secundary);
+  font-size: 2.25rem;
+  font-weight: 400;
+  line-height: 1;
   color: var(--stone-900);
-  line-height: 1.1;
+  margin-top: 0;
+  margin-bottom: 1.25rem;
 }
 
 h2 {
-  font-size: 1.5rem;
+  font-family: var(--font-secundary);
+  font-size: 1.75rem;
+  font-weight: 400;
   color: var(--brown-800);
+  margin-top: 0;
+  margin-bottom: 1rem;
 }
 
 p {
@@ -55,25 +54,18 @@ p {
   margin-bottom: 1rem;
 }
 
-hr {
-  border: none;
-  border-top: 1px solid hsl(30, 10%, 34%, 0.2);
-  margin: 1rem 0;
-}
-
 ul {
-  margin-top: 0;
-  margin-bottom: 1rem;
-  padding-left: 0.5rem;
   list-style: none;
+  padding-left: 0.5rem;
+  margin-top: 0;
+  margin-bottom: 1.5rem;
 }
 
 ul li {
   display: flex;
   align-items: center;
   gap: 1.5rem;
-  line-height: 1.3;
-  margin-bottom: 0.5rem;
+  margin-bottom: 0.25rem;
 }
 
 ul li:last-child {
@@ -81,25 +73,25 @@ ul li:last-child {
 }
 
 ul li::before {
-  content: '•';
-  font-size: 1.25rem;
+  content: '●';
+  font-size: 0.6rem;
   color: var(--brown-800);
 }
 
 ol {
-  margin-top: 0;
-  margin-bottom: 1rem;
-  padding-left: 0.5rem;
   list-style: none;
-  counter-reset: count;
+  counter-reset: ol-counter;
+  padding-left: 0.5rem;
+  margin-top: 0;
+  margin-bottom: 1.5rem;
 }
 
 ol li {
-  counter-increment: count;
+  counter-increment: ol-counter;
   display: flex;
-  gap: 1.5rem;
   align-items: start;
-  margin-bottom: 0.5rem;
+  gap: 1.5rem;
+  margin-bottom: 0.25rem;
 }
 
 ol li:last-child {
@@ -107,9 +99,17 @@ ol li:last-child {
 }
 
 ol li::before {
-  content: counter(count) '.';
+  content: counter(ol-counter) '.';
   font-weight: 600;
   color: var(--brown-800);
+}
+
+hr {
+  margin: 1.75rem 0;
+  color: inherit;
+  border: 0;
+  border-top: 1px solid;
+  opacity: 0.25;
 }
 
 table {
@@ -119,23 +119,22 @@ table {
 
 tr {
   border-bottom: 1px solid hsl(30, 10%, 34%, 0.2);
-  padding: 1rem;
 }
 
 tr:last-child {
-  border-bottom: none;
+  border-bottom: 0;
 }
 
 th,
 td {
-  width: 50%;
   padding: 0.75rem 0;
+  width: 50%;
 }
 
 th {
-  font-weight: 400;
   text-align: left;
   padding-left: 2rem;
+  font-weight: 400;
 }
 
 td {
@@ -149,50 +148,57 @@ td {
 }
 
 .recipe-body {
-  padding: 1.5rem;
+  padding: 2rem 1.75rem;
+}
+
+.recipe-time {
+  margin: 1.75rem 0;
 }
 
 .callout {
-  background: var(--rose-50);
-  padding: 1.25rem;
+  background-color: var(--rose-50);
+  padding: 1.25rem 1.5rem;
   border-radius: 0.5rem;
-  margin-bottom: 1rem;
 }
 
 .callout-title {
   font-family: var(--font-primary);
+  font-size: 1.25rem;
   font-weight: 600;
   color: var(--rose-800);
+  margin-bottom: 0.75rem;
 }
 
 .callout-list {
-  margin-bottom: 0;
+  margin: 0;
 }
 
 .callout-item::before {
   color: var(--rose-800);
 }
 
-section {
-  padding: 0.5rem 0;
-}
-
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 768px) {
   body {
-    min-height: 100vh;
+    background-color: var(--stone-100);
     display: grid;
     place-items: center;
-    background: var(--stone-100);
+    min-height: 100vh;
   }
 
   .recipe {
     max-width: 700px;
-    background: var(--white);
+    background-color: var(--white);
+    padding: 2rem;
+    margin: 5rem 0;
     border-radius: 1rem;
-    padding: 1.5rem;
+  }
+
+  .recipe-img {
+    border-radius: 0.5rem;
+    margin-bottom: 2rem;
   }
 
   .recipe-body {
-    padding-inline: 0;
+    padding: 0;
   }
 }
